# qt-ifw-admin-install-test-project

./: CMakeLists.txt  README.md  build_and_test.ps1  controlscript.js  installscript.js  main.cpp
cmake/: GetGitVersion.cmake
